<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ack_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/black"
    android:padding="24dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/risk_title"
            android:gravity="center"
            android:lineSpacingExtra="4dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="normal"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:text="@string/risk_message"
            android:gravity="center"
            android:lineSpacingExtra="4dp" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/agreeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agree_btn_text"
            android:gravity="top"
            app:buttonIconTint="@color/red"
            app:buttonTint="@color/white"
            android:textColor="@color/white"
            android:layout_marginTop="16dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/aboutButton"
                android:layout_width="0dp"
                app:backgroundTint="@color/red"
                app:cornerRadius="4dp"
                android:layout_marginEnd="8dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/about_us" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/termsButton"
                android:layout_width="0dp"
                android:layout_marginStart="8dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:backgroundTint="@color/red"
                app:cornerRadius="4dp"
                android:textColor="@color/white"
                android:text="@string/terms_of_use" />
        </LinearLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnProceed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cornerRadius="4dp"
            android:textColor="@color/red"
            android:text="@string/proceed"
            app:backgroundTint="@color/white"/>
    </LinearLayout>
</ScrollView>
