<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/bg_bottom_sheet"
    android:padding="16dp">

    <View
        android:layout_width="120dp"
        android:layout_height="3dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/white"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <!-- Back Button -->
    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_back"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@id/btnAddToPlaylist"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@android:color/white"
        android:background="?actionBarItemBackground"/>

    <!-- Title -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album_list"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/btnBack"
        app:layout_constraintEnd_toEndOf="@id/btnMore"
        app:layout_constraintBottom_toBottomOf="@id/btnAddToPlaylist"
        android:layout_marginTop="16dp" />

    <!-- Add to Playlist Button -->
    <ImageButton
        android:id="@+id/btnAddToPlaylist"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:contentDescription="@string/add_to_playlist"
        android:src="@drawable/ic_add"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnMore"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="?actionBarItemBackground"
        app:tint="@android:color/white" />
        <ImageButton
            android:id="@+id/btnMore"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/add_to_playlist"
            android:src="@drawable/ic_more"
            android:scaleType="fitXY"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="?actionBarItemBackground"
            app:tint="@android:color/white" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- RecyclerView for Albums -->
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMode="fixed"
        app:tabIconTint="@color/white"
        app:tabIndicatorFullWidth="true"
        app:tabSelectedTextColor="@color/white"
        app:tabIndicatorColor="@color/white"
        app:tabTextColor="#9B9B9B"
        android:background="@color/black"
        app:tabGravity="fill"/>
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAlbums"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_album"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="5"
        android:layout_marginTop="16dp" />

</LinearLayout>
